--- a/isoprofiler.html
+++ b/isoprofiler.html
@@ -141,8 +141,10 @@
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%201.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%201.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%202.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%202.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%201.png"><img class="gallery4 left_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%201.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%202.png"><img class="gallery4 center_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%202.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%203.png"><img class="gallery4 center_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%203.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%204.png"><img class="gallery4 right_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%204.png" alt="" /></a>
 				</div>
 
 
