parking plus videos added

--- a/parking_plus.html
+++ b/parking_plus.html
@@ -140,6 +140,26 @@
 					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
+				<div class="gallery">
+					<video preload="metadata" controls class="gallery2 left_image with_border">
+						<source src="img/parkingplus/video/1.map-interactions.mp4" type="video/mp4">
+					</video>
+
+					<video preload="metadata" controls class="gallery2 right_image with_border">
+						<source src="img/parkingplus/video/3.map%20interactions%20-%20private%20area%20busy%20waiting.mp4" type="video/mp4">
+					</video>
+				</div>
+
+				<div class="gallery">
+					<video preload="metadata" controls class="gallery2 left_image with_border">
+						<source src="img/parkingplus/video/6.parking%20suggestions.mp4" type="video/mp4">
+					</video>
+
+					<video preload="metadata" controls class="gallery2 right_image with_border">
+						<source src="img/parkingplus/video/7.find%20my%20car.avi.mp4" type="video/mp4">
+					</video>
+				</div>
+
 				<!--<div class="gallery">-->
 				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
 				<!--</div>-->
@@ -175,7 +195,12 @@
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/marketing_sketch_1.png"><img class="gallery3 left_image with_border" id="function_candidates_1" src="img/parkingplus/marketing_sketch_1.png" alt="" /></a>
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/marketing_sketch_2.png"><img class="gallery3 center_image with_border" id="function_candidates_1" src="img/parkingplus/marketing_sketch_2.png" alt="" /></a>
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/marketing_sketch_3.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/parkingplus/marketing_sketch_3.png" alt="" /></a>
+				</div>
 
+				<div class="gallery">
+					<video preload="metadata" controls class="gallery1">
+						<source src="img/parkingplus/video/explainer%20video.mp4" type="video/mp4">
+					</video>
 				</div>
 
                 <div id="disqus_thread"></div>
