enhanced quesee images

--- a/quesee.html
+++ b/quesee.html
@@ -129,13 +129,14 @@
 
                 <p>Here are some screenshots with the original application, before it was redesigned:</p>
                 <div class="gallery">
-                    <a class="fancybox" rel="before" title="Homepage" href="img/quesee/before/homepage.png"><img class="gallery3 left_image with_border" id="before_1" src="img/quesee/before/homepage.png" alt="" /></a>
-				    <a class="fancybox" rel="before" title="Test Scenarios" href="img/quesee/before/scenarios.png"><img class="gallery3 center_image with_border" id="before_4" src="img/quesee/before/scenarios.png" alt="" /></a>
-				    <a class="fancybox" rel="before" title="List of test steps belonging to a scenario" href="img/quesee/before/scenario-view.png"><img class="gallery3 right_image with_border" id="before_3" src="img/quesee/before/scenario-view.png" alt="" /></a>
-				    <span class="gallery_separator"></span>
-                    <a class="fancybox" rel="before" title="Test scenario being executed" href="img/quesee/before/scenario-run.png"><img class="gallery3 left_image with_border" id="before_2" src="img/quesee/before/scenario-run.png" alt="" /></a>
-				    <a class="fancybox" rel="before" title="Detailed view of a test step" href="img/quesee/before/test-view.png"><img class="gallery3 center_image with_border" id="before_5" src="img/quesee/before/test-view.png" alt="" /></a>
-				    <a class="fancybox" rel="before" title="Side by side comparison of test results" href="img/quesee/before/test-run.png"><img class="gallery3 right_image with_border" id="before_6" src="img/quesee/before/test-run.png" alt="" /></a>
+                    <a class="fancybox" rel="before" title="Homepage" href="img/quesee/before/homepage.png"><img class="gallery2 left_image with_border" id="before_1" src="img/quesee/before/homepage.png" alt="" /></a>
+				    <a class="fancybox" rel="before" title="Test Scenarios" href="img/quesee/before/scenarios.png"><img class="gallery2 right_image with_border" id="before_4" src="img/quesee/before/scenarios.png" alt="" /></a>
+                    <span class="gallery_separator"></span>
+                    <a class="fancybox" rel="before" title="List of test steps belonging to a scenario" href="img/quesee/before/scenario-view.png"><img class="gallery2 left_image with_border" id="before_3" src="img/quesee/before/scenario-view.png" alt="" /></a>
+                    <a class="fancybox" rel="before" title="Test scenario being executed" href="img/quesee/before/scenario-run.png"><img class="gallery2 right_image with_border" id="before_2" src="img/quesee/before/scenario-run.png" alt="" /></a>
+                    <span class="gallery_separator"></span>
+                    <a class="fancybox" rel="before" title="Detailed view of a test step" href="img/quesee/before/test-view.png"><img class="gallery2 left_image with_border" id="before_5" src="img/quesee/before/test-view.png" alt="" /></a>
+				    <a class="fancybox" rel="before" title="Side by side comparison of test results" href="img/quesee/before/test-run.png"><img class="gallery2 right_image with_border" id="before_6" src="img/quesee/before/test-run.png" alt="" /></a>
                 </div>
 				<p>For those of you not familiar with test automation, you can read a short description bellow.</p>
 
@@ -193,22 +194,19 @@
 
                 <p>I played around the idea of placing a tree of items on the left and a larger area on the right to
                     display more information about the items selected in the tree.</p>
+
                 <div class="gallery">
-                    <a class="fancybox" rel="sketches" title="Test Suite selection sketch" href="img/quesee/after/sketches/suite.jpg"><img class="gallery3 left_image" id="sketches_1" src="img/quesee/after/sketches/suite.jpg" alt="" /></a>
-                    <a class="fancybox" rel="sketches" title="Test Scenario selection sketch" href="img/quesee/after/sketches/scenario.jpg"><img class="gallery3 center_image" id="sketches_2" src="img/quesee/after/sketches/scenario.jpg" alt="" /></a>
-                    <a class="fancybox" rel="sketches" title="Test Step selection sketch" href="img/quesee/after/sketches/test.jpg"><img class="gallery3 right_image" id="sketches_3" src="img/quesee/after/sketches/test.jpg" alt="" /></a>
+                    <a class="fancybox" rel="sketches" title="Test Suite selection sketch" href="img/quesee/A4%204x8%20grid%201.png"><img class="gallery3 left_image with_border" id="sketches_1" src="img/quesee/A4%204x8%20grid%201.png" alt="" /></a>
+                    <a class="fancybox" rel="sketches" title="Test Scenario selection sketch" href="img/quesee/A4%204x8%20grid%202.png"><img class="gallery3 center_image with_border" id="sketches_2" src="img/quesee/A4%204x8%20grid%202.png" alt="" /></a>
+                    <a class="fancybox" rel="sketches" title="Test Step selection sketch" href="img/quesee/A4%204x8%20grid%203.png"><img class="gallery3 right_image with_border" id="sketches_3" src="img/quesee/A4%204x8%20grid%203.png" alt="" /></a>
                 </div>
                 <p>The tree would display two different groupings of the collection of tests, by Component and by Suite,
                     and would also provide contextual actions on mouse over for each type of item.</p>
-                <div class="gallery">
-                    <a class="fancybox" rel="sketches" title="Test grouping by Component or by Suite" href="img/quesee/after/sketches/explorer.jpg"><img class="gallery3 left_image" id="sketches_4" src="img/quesee/after/sketches/explorer.jpg" alt="" style="width: 45%; margin-right:auto; margin-left: auto;"/></a>
-                </div>
+
                 <p>I also wanted to have the most important actions, like recording, replaying and reporting, easy to access
                     and make the state of the application visible all the time, so the users will get better feedback and
                     feel in control of the situation.</p>
-                <div class="gallery">
-                <a class="fancybox" rel="sketches" title="Replaying and recording tests" href="img/quesee/after/sketches/motion.jpg"><img class="gallery1" id="sketches_5" src="img/quesee/after/sketches/motion.jpg" alt="" /></a>
-                </div>
+
                 <p>These drawing may not make too much sense for now, but things will become more clear in the next section,
                     so please bear with me.</p>
 
@@ -261,10 +259,11 @@
                     changes).</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="implementation" title="Test Suite view, not implemented yet" href="img/quesee/after/implementation/1.suite_view.PNG"><img class="gallery4 left_image with_border" id="impementation_1" src="img/quesee/after/implementation/1.suite_view.PNG" alt="" /></a>
-				    <a class="fancybox" rel="implementation" title="Test Scenario view, not implemented yet" href="img/quesee/after/implementation/2.scenario_view.PNG"><img class="gallery4 center_image with_border" id="impementation_2" src="img/quesee/after/implementation/2.scenario_view.PNG" alt="" /></a>
-				    <a class="fancybox" rel="implementation" title="Test Step view" href="img/quesee/after/implementation/3.test_step_view.PNG"><img class="gallery4 center_image with_border" id="impementation_3" src="img/quesee/after/implementation/3.test_step_view.PNG" alt="" /></a>
-				    <a class="fancybox" rel="implementation" title="Editing a test step, the save button is visible only when there are unsaved changes." href="img/quesee/after/implementation/4.test_step_editing.PNG"><img class="gallery4 right_image with_border" id="impementation_4" src="img/quesee/after/implementation/4.test_step_editing.PNG" alt="" /></a>
+                    <a class="fancybox" rel="implementation" title="Test Suite view, not implemented yet" href="img/quesee/after/implementation/1.suite_view.PNG"><img class="gallery2 left_image with_border" id="impementation_1" src="img/quesee/after/implementation/1.suite_view.PNG" alt="" /></a>
+				    <a class="fancybox" rel="implementation" title="Test Scenario view, not implemented yet" href="img/quesee/after/implementation/2.scenario_view.PNG"><img class="gallery2 right_image with_border" id="impementation_2" src="img/quesee/after/implementation/2.scenario_view.PNG" alt="" /></a>
+                    <span class="gallery_separator"></span>
+                    <a class="fancybox" rel="implementation" title="Test Step view" href="img/quesee/after/implementation/3.test_step_view.PNG"><img class="gallery2 left_image with_border" id="impementation_3" src="img/quesee/after/implementation/3.test_step_view.PNG" alt="" /></a>
+				    <a class="fancybox" rel="implementation" title="Editing a test step, the save button is visible only when there are unsaved changes." href="img/quesee/after/implementation/4.test_step_editing.PNG"><img class="gallery2 right_image with_border" id="impementation_4" src="img/quesee/after/implementation/4.test_step_editing.PNG" alt="" /></a>
                 </div>
                 <p>Modifying a test is necessary in situations where the expected result has changed over time and needs
                     to be updated. To do that, the user has to double click an existing value and type in a new one instead,
