added curation sketches

--- a/curation.html
+++ b/curation.html
@@ -292,6 +292,11 @@
 					with the existing tool, and slowing them down, even for a short period of time, would mean less money for
 					them.</p>
 
+				<div class="gallery">
+					<a class="fancybox" rel="curation after" title="" href="img/curation/A4%204x8%20grid%202.png"><img class="gallery2 left_image with_border" id="curation_after_6" src="img/curation/A4%204x8%20grid%202.png" alt="" /></a>
+					<a class="fancybox" rel="curation after" title="" href="img/curation/A4%204x8%20grid%201.png"><img class="gallery2 right_image with_border" id="curation_after_7" src="img/curation/A4%204x8%20grid%201.png" alt="" /></a>
+				</div>
+
 				<h3>Articles and Findings management</h3>
 
 				<p>There was not much to change when it came to displaying lists of articles and findings. I did clean
