caption added to videos

--- a/parking_plus.html
+++ b/parking_plus.html
@@ -149,7 +149,7 @@
 						</video>
 
 						<script type="text/javascript">
-							addVideoControls($("#interaction1"));
+							addVideoControls($("#interaction1"), "map interactions");
 						</script>
 					</div>
 
@@ -159,7 +159,7 @@
 						</video>
 
 						<script type="text/javascript">
-							addVideoControls($("#interaction2"));
+							addVideoControls($("#interaction2"), "private parking area with busy waiting");
 						</script>
 					</div>
 				</div>
@@ -171,7 +171,7 @@
 						</video>
 
 						<script type="text/javascript">
-							addVideoControls($("#interaction3"));
+							addVideoControls($("#interaction3"), "parking suggestions");
 						</script>
 					</div>
 
@@ -181,7 +181,7 @@
 						</video>
 
 						<script type="text/javascript">
-							addVideoControls($("#interaction4"));
+							addVideoControls($("#interaction4"), "find my car");
 						</script>
 					</div>
 				</div>
