multicolor overlay - ideation paragraph written

--- a/multi_color_overlay.html
+++ b/multi_color_overlay.html
@@ -133,30 +133,41 @@
 
 				<h2>IDEATION</h2>
 
-                <p>hand drawn mockups</p>
+                <p>The network already supported one measurement overlay by way of node fill color. The trick was to come
+					up with a paradigm that works for one or multiple sets of values, and it was obvious that fill color
+					alone was not enough.</p>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/network_overlay/A4%204x8%20grid%201.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/network_overlay/A4%204x8%20grid%201.png" alt="" /></a>
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/network_overlay/A4%204x8%20grid%202.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/network_overlay/A4%204x8%20grid%202.png" alt="" /></a>
 				</div>
 
-                <p>overlay ideation</p>
-
+                <p>Starting from the original mock-up, I played with a lot of ideas on how to represent multiple dimensions
+					in a way that makes similar molecules easy to spot. This is part of the variations I came up with
+					after combining different visualization types with color ranges, data points and labels.</p>
 
 				<div class="gallery">
 				<a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/2.ideation_collage.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/2.ideation_collage_4_no_margins.png" alt="" /></a>
 				</div>
 
-                <p>ideation integration test bla bla bla bla sjdhfkjhs ksjdhf skdf jkhskjdfh jhf kdsajfhksdjf  kjshdfk sdkfj askhdf s</p>
+                <p>We threw away a lot of ideas, but some of them survived and were tested in the context of a network
+					of nodes to see how well they meet the original goals.</p>
+
+				<p>The vertical bars and the parallel coordinates were the most popular and did not disappoint during
+					test either, although the last one needed more simplification since it was very heavy on the eye.</p>
 
                 <div class="gallery">
-				    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/3.integration_test_bars.png"><img class="gallery4" id="network_overlay_3" src="img/network_overlay/3.integration_test_bars.png" alt="" /></a>
-				    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/4.integration_test_sunburst.png"><img class="gallery4" id="network_overlay_4" src="img/network_overlay/4.integration_test_sunburst.png" alt="" /></a>
-				    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/5.integration_test_worms.png"><img class="gallery4" id="network_overlay_5" src="img/network_overlay/5.integration_test_worms.png" alt="" /></a>
-				    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/6.integration_test_worms_simplified.png"><img class="gallery4" id="network_overlay_6" src="img/network_overlay/6.integration_test_worms_simplified.png" alt="" /></a>
+				    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/3.integration_test_bars.png"><img class="gallery2 left_image" id="network_overlay_3" src="img/network_overlay/3.integration_test_bars.png" alt="" /></a>
+				    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/4.integration_test_sunburst.png"><img class="gallery2 right_image" id="network_overlay_4" src="img/network_overlay/4.integration_test_sunburst.png" alt="" /></a>
+					<span class="gallery_separator"></span>
+					<a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/5.integration_test_worms.png"><img class="gallery2 left_image" id="network_overlay_5" src="img/network_overlay/5.integration_test_worms.png" alt="" /></a>
+				    <a class="fancybox" rel="group" title="bla bla bla" href="img/network_overlay/6.integration_test_worms_simplified.png"><img class="gallery2 right_image" id="network_overlay_6" src="img/network_overlay/6.integration_test_worms_simplified.png" alt="" /></a>
 				</div>
 
-                <p>exports</p>
+                <p>The last piece of the puzzle was the exported image design, since the ultimate goal of the users was
+					to publish their interesting findings. The parallel coordinates view with all data points superimposed
+					worked great as a legend since the trends are easy to see and easy to match with the molecules
+					emphasized on the network.</p>
 
                 <div class="gallery">
                     <a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/network_overlay/7.export_1.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/network_overlay/7.export_1.png" alt="" /></a>
