multicolor overlay - more content added

--- a/multi_color_overlay.html
+++ b/multi_color_overlay.html
@@ -220,15 +220,21 @@
 
 				<h2>CONCLUSIONS</h2>
 
-				<p>user testing</p>
-				<p>afterthoughts</p>
-                <p>final screenshot</p>
+				<p>User testing was done during both design and development phases. We started by asking feedback early on
+					and continued with beta testing when the feature was almost implemented. The requested changes were small and
+					did not affect the original design very much.</p>
+
+				<p>I have to mention that this was the first time I was given a central role in the design process and
+					I was also the one coding the feature, all inside a three months release time frame. It was a pretty
+					ambitious goal, but it also came with a lot of satisfaction.</p>
+
+                <p>This is a screenshot of the version that was released and the immediate feedback was very positive.</p>
 
 				<div class="gallery">
 				<a class="fancybox" rel="group" title="The released version" href="img/network_overlay/10.released_version.png"><img class="gallery1" id="function_candidates_1" src="img/network_overlay/10.released_version.png" alt="" /></a>
 				</div>
 
-				<p>quotes from emails</p>
+				<p>Here are some quotes from the emails that followed, mostly from the sales and management team:</p>
 
 				<p class="pullquote-wide">"The new multi-overlay that went into production this week helped the Sales team close a sale! That’s immediate impact. Nice job team!"</p>
 				<p class="pullquote-wide">"Qian and I received the PO right after her demo. Qian was great and the new features rock!!                "</p>
